EKS TF/EKS Infra-TF (Private Node) - Dev/igw.tf
resource "aws_internet_gateway" "eks-igw" {
  vpc_id = aws_vpc.eks-vpc.id

  tags = {
    Name = "eks-${var.env}-igw"
  }
}
